--- a/.gitignore
+++ b/.gitignore
@@ -317,3 +317,59 @@ First Year/Second Semester/Data Structures/Labs/Homework 3/deque2.obj
 First Year/Second Semester/Databases/Project/~WRL0848.tmp
 First Year/Second Semester/Databases/Project/~$2_Mincu_AdrianLucian-proiect.docx
 First Year/Second Semester/Databases/Project/~WRL0005.tmp
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/CMakeLists.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/ShowIncludes/main.c
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/ShowIncludes/foo.h
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.obj
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.obj
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CMakeSystem.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/3.24.2/CMakeCCompiler.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/build.ninja
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-35e626df6e6ffa1819a2.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/target-Homework_3-Debug-f58cd952263c470ba57b.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-08T06-58-33-0711.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-27a7ae252d786b90200d.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-5d53d7fdc8b384ff885b.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/cache-v2-2005a9ed6e97fe66ed6b.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/.idea/Homework 3.iml
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/CMakeLists.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/CMakeLists.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/.idea/.name
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/target-Homework3-Debug-f84056e77178baac11af.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-08T07-03-09-0985.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-d428dc0d1ba54df4588e.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-76c7e8f6ea3b40d1a50d.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/cache-v2-6d9254f2cbc6a0628008.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/.idea/.name
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-08T07-33-41-0528.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/.ninja_log
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/Homework_3.dir/embed.manifest
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/Homework_3.dir/intermediate.manifest
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/Homework_3.dir/main.cpp.obj
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/Homework_3.dir/manifest.rc
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/Homework_3.dir/manifest.res
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/Homework_3.dir/vc140.pdb
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/Homework_3.ilk
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/Homework_3.pdb
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/.idea/.name
