changed function, problem finished

--- a/.gitignore
+++ b/.gitignore
@@ -320,6 +320,7 @@ First Year/Second Semester/Databases/Project/~WRL0005.tmp
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/CMakeLists.txt
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/Testing/Temporary/LastTest.log
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/ShowIncludes/main.obj
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/ShowIncludes/main.c
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/ShowIncludes/foo.h
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/CMakeFiles/rules.ninja
