wrong film director relation

--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,4 @@ First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-bu
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/Homework_3.ilk
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/Homework_3.pdb
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/.idea/.name
+First Year/Second Semester/Databases/Project/~WRL0003.tmp
