--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,7 @@ First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-bu
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/cmake-build-debug/Homework_3.pdb
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 3/.idea/.name
 First Year/Second Semester/Databases/Project/~WRL0003.tmp
+First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.idea/Hash,Heap.iml
+First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.vscode/launch.json
+First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.vscode/tasks.json
+First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/hashuri.obj
