--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.idea/Hash,
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.vscode/launch.json
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.vscode/tasks.json
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/hashuri.obj
+First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/proc2.obj
