tried new problem + edited word

--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,5 @@ First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.vscode/lau
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.vscode/tasks.json
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/hashuri.obj
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/proc2.obj
+First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.vscode/settings.json
+First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/tempCodeRunnerFile.cpp
