--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,36 @@ First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/hashuri.obj
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/proc2.obj
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/.vscode/settings.json
 First Year/Second Semester/Data Structures/Labs/Homework 3/Hash,Heap/tempCodeRunnerFile.cpp
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cache-v2-8328c351904ea6627931.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cache-v2-e44ad916251dbe2e4b8e.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-69aa3f6c627decd860bb.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-83869687218bba93bef1.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-17T11-50-53-0420.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-17T15-16-00-0225.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/target-Homework_2-Debug-58001ae4d43b7dd6c549.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-972c02320470f57b00f8.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-a4c4535f648efa189504.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-17T15-16-00-0252.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/embed.manifest
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/intermediate.manifest
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/manifest.rc
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/manifest.res
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/vc140.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/ShowIncludes/main.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
