--- a/.gitignore
+++ b/.gitignore
@@ -415,3 +415,4 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.obj
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/CMakeOutput.log
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Databases/Project/~WRL1486.tmp
