--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,50 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/CMakeOutput.log
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
 First Year/Second Semester/Databases/Project/~WRL1486.tmp
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/.idea/Colocviu2020.iml
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/cache-v2-d4bb4258eebac01a2da8.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-d59e0f51db5d96822b04.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-2e3c27584ce29edc1021.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-26T11-17-55-0436.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/target-Colocviu2020-Debug-ca3d5d8c8d53143aca98.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-972c02320470f57b00f8.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/build.ninja
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CMakeCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CMakeSystem.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdC/CMakeCCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdCXX/CMakeCXXCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/Colocviu2020.dir/embed.manifest
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/Colocviu2020.dir/intermediate.manifest
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/Colocviu2020.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/Colocviu2020.dir/manifest.rc
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/Colocviu2020.dir/manifest.res
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/Colocviu2020.dir/vc140.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/ShowIncludes/foo.h
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/ShowIncludes/main.c
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/ShowIncludes/main.obj
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/Colocviu2020.ilk
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/Colocviu2020.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/CMakeLists.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/CMakeLists.txt
