--- a/.gitignore
+++ b/.gitignore
@@ -463,3 +463,8 @@ First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-b
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/Testing/Temporary/LastTest.log
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/CMakeLists.txt
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/CMakeLists.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-26T11-31-22-0965.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/CMakeFiles/CMakeError.log
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-26T11-38-36-0938.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-48ffc62a9973778ee760.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/cache-v2-cd62d9d2c8ed4b883e23.json
