--- a/.gitignore
+++ b/.gitignore
@@ -468,3 +468,49 @@ First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-b
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-26T11-38-36-0938.json
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-48ffc62a9973778ee760.json
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2020/cmake-build-debug/.cmake/api/v1/reply/cache-v2-cd62d9d2c8ed4b883e23.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/.idea/Colocviu2021.iml
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/cache-v2-6da56daa8ad5750b3c65.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-88c6086b2e51968610ff.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-da463e09f9b3f78b63b0.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-29T05-14-10-0692.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/target-Colocviu2021-Debug-c6c65bbfc394416e441b.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-972c02320470f57b00f8.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/build.ninja
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CMakeCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CMakeSystem.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdC/CMakeCCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdCXX/CMakeCXXCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/Colocviu2021.dir/embed.manifest
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/Colocviu2021.dir/intermediate.manifest
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/Colocviu2021.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/Colocviu2021.dir/manifest.rc
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/Colocviu2021.dir/manifest.res
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/Colocviu2021.dir/vc140.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/ShowIncludes/foo.h
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/ShowIncludes/main.c
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/ShowIncludes/main.obj
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/Colocviu2021.ilk
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/Colocviu2021.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/CMakeLists.txt
