some updated/ lab tests from last semester and today

--- a/.gitignore
+++ b/.gitignore
@@ -514,3 +514,76 @@ First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-b
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/Colocviu2021.pdb
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/Testing/Temporary/LastTest.log
 First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/CMakeLists.txt
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-29T18-29-30-0990.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-a1124f68914c216f31e5.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-b3ca6b862503cfec6798.json
+First Year/Second Semester/Object-oriented programming/Labs/Colocviu2021/cmake-build-debug/.cmake/api/v1/reply/cache-v2-e2b120d7375973f02a60.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/.idea/untitled.iml
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/reply/cache-v2-15e3f1374254e40307c3.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-d172da7f1885fe132c5d.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-3f8c5710c4929356865e.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-29T18-54-23-0166.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/reply/target-untitled-Debug-da032358c255c505e109.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-79ce268a670ae6f8ec72.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/build.ninja
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/3.25.2/CMakeCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/3.25.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/3.25.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/3.25.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/3.25.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/3.25.2/CMakeSystem.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/CMakeFiles/untitled.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuMateInfo 2023/CMakeLists.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/.idea/ColocviuPOO.iml
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/reply/cache-v2-877ca5d16211b3e82f5e.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-7566d7ab46ad100cfcd8.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-00b323e28df812a82c7e.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/reply/index-2023-05-29T20-21-00-0751.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/reply/target-ColocviuPOO-Debug-445a0858c01e5a1a8b50.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-79ce268a670ae6f8ec72.json
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/build.ninja
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/3.25.2/CMakeCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/3.25.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/3.25.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/3.25.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/3.25.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/3.25.2/CMakeSystem.cmake
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/3.25.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/ColocviuPOO.dir/132_Mincu_Adrian-Lucian.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/ColocviuPOO.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/ColocviuPOO/CMakeLists.txt
