feat: added materials

--- a/.gitignore
+++ b/.gitignore
@@ -601,3 +601,6 @@ Second Year/First Semester/ASP.NET (online)/Labs/L01/lab01/lab01/obj/Debug/net7.
 Second Year/First Semester/ASP.NET (online)/Labs/lab01/lab01/obj/
 Second Year/First Semester/ASP.NET (online)/Labs/lab01/lab01/bin/
 Second Year/First Semester/ASP.NET (online)/Labs/lab01/.vs/lab01/v17/.suo
+bin
+obj
+.vs
