feat: lab 2 exercises

--- a/.gitignore
+++ b/.gitignore
@@ -604,3 +604,4 @@ Second Year/First Semester/ASP.NET (online)/Labs/lab01/.vs/lab01/v17/.suo
 bin
 obj
 .vs
+Second Year/First Semester/Probabilities and Statistics/Labs/L02/tempCodeRunnerFile.py
