feat: new lab exercise

--- a/.gitignore
+++ b/.gitignore
@@ -683,3 +683,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+Second Year/First Semester/Operating Systems/Lab Exercises/L05/.vscode/settings.json
