feat: done first exercise, need to make multiplication function for second

--- a/.gitignore
+++ b/.gitignore
@@ -684,3 +684,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 Second Year/First Semester/Operating Systems/Lab Exercises/L05/.vscode/settings.json
+Second Year/First Semester/Operating Systems/Lab Exercises/L06/matrixMult
+Second Year/First Semester/Operating Systems/Lab Exercises/L06/strrev
