bug: tried soling first task but it isnt correct

--- a/.gitignore
+++ b/.gitignore
@@ -686,3 +686,4 @@ fabric.properties
 Second Year/First Semester/Operating Systems/Lab Exercises/L05/.vscode/settings.json
 Second Year/First Semester/Operating Systems/Lab Exercises/L06/matrixMult
 Second Year/First Semester/Operating Systems/Lab Exercises/L06/strrev
+Second Year/First Semester/Operating Systems/Lab Exercises/L07/count
