chore: renamed file

--- a/.gitignore
+++ b/.gitignore
@@ -687,3 +687,4 @@ Second Year/First Semester/Operating Systems/Lab Exercises/L05/.vscode/settings.
 Second Year/First Semester/Operating Systems/Lab Exercises/L06/matrixMult
 Second Year/First Semester/Operating Systems/Lab Exercises/L06/strrev
 Second Year/First Semester/Operating Systems/Lab Exercises/L07/count
+Second Year/First Semester/DBMS/Lab Exercises/Homework 04/~$2_Mincu_AdrianLucian-Tema4.docx
