--- a/.gitignore
+++ b/.gitignore
@@ -688,3 +688,4 @@ Second Year/First Semester/Operating Systems/Lab Exercises/L06/matrixMult
 Second Year/First Semester/Operating Systems/Lab Exercises/L06/strrev
 Second Year/First Semester/Operating Systems/Lab Exercises/L07/count
 Second Year/First Semester/DBMS/Lab Exercises/Homework 04/~$2_Mincu_AdrianLucian-Tema4.docx
+Second Year/First Semester/Operating Systems/Lab Exercises/L07/barrier
