--- a/.gitignore
+++ b/.gitignore
@@ -689,3 +689,6 @@ Second Year/First Semester/Operating Systems/Lab Exercises/L06/strrev
 Second Year/First Semester/Operating Systems/Lab Exercises/L07/count
 Second Year/First Semester/DBMS/Lab Exercises/Homework 04/~$2_Mincu_AdrianLucian-Tema4.docx
 Second Year/First Semester/Operating Systems/Lab Exercises/L07/barrier
+Second Year/First Semester/Functional Programming/Labs/L07/.idea/L07.iml
+
+.idea/
