feat: done factorial

--- a/.gitignore
+++ b/.gitignore
@@ -965,4 +965,34 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-Second Year/Second Semester/Artificial Intelligence/Labs/L01/L01.iml
+*.iml
+
+### IntelliJ IDEA ###
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
