added modified files

--- a/Third Year/First Semester/Computer Graphics/Labs/L04/L04.vcxproj
+++ b/Third Year/First Semester/Computer Graphics/Labs/L04/L04.vcxproj
@@ -176,7 +176,7 @@ xcopy /y /d "$(ProjectDir)lib\x64\SOIL\*.dll" "$(OutDir)" &amp;</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="04_02_indexare.cpp" />
+    <ClCompile Include="04_03a_doua_VAO.cpp" />
     <ClCompile Include="include\glm\detail\glm.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\imageloader.cpp" />
