fix: rotation + feat: solved shadows

--- a/Third Year/First Semester/Computer Graphics/Labs/L10/L10.vcxproj
+++ b/Third Year/First Semester/Computer Graphics/Labs/L10/L10.vcxproj
@@ -645,6 +645,10 @@ xcopy /y /d "$(ProjectDir)lib\x64\SOIL\*.dll" "$(OutDir)" &amp;</Command>
     <None Include="lib\x64\GL\glew32s.dll" />
     <None Include="lib\x64\SOIL\SOIL.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="10_01_Shader.frag" />
+    <Content Include="10_01_Shader.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
